--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -84,6 +84,9 @@ If you have any questions, please contact @Fabian on Slack."
         icon: "fa fa-envelope"
       - url: https://instagram.com/gtsailing
         icon: "fab fa-instagram"
+      - url: https://www.paypal.com/donate/?hosted_button_id=AZHVMGHBE9LEQ&source=qr
+        icon: "fas fa-donate"
+
 en-US:
   <<: *DEFAULT_EN
 en-CA:
