--- a/_data/about.yml
+++ b/_data/about.yml
@@ -38,6 +38,10 @@ en: &DEFAULT_EN
         image: j24.gif
       - name: "Catalina 27"
         image: catalina27.png
+  links:
+    title: "Links"
+    text: "You can find our current bylaws [here](https://drive.google.com/file/d/1WeiFO5tuSN0jr6djbjKaDkC9jTw1fYAT/view)."
+
 
 en-US:
   <<: *DEFAULT_EN
