--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -56,11 +56,11 @@ The purpose of this club is to encourage sailing, teach sailing and promote raci
     img: intro/learn.png
     content: "Dive into our Learn To Sail course and master the lingo and skills needed to sail a boat. With in-person classroom sessions at the CRC and hands-on practice sessions out on the water, you're in for an adventurous ride. Whether you're a wide-eyed freshman or a seasoned faculty member, this is your golden ticket to making waves on campus. So come, be part of the Ramblin' Wreck community and let's set sail together!<br><br>
 
-_Classroom sessions_: Next class starting in the spring semester! \\
+_Classroom sessions_: Mondays at 6:15 pm in CRC 240, starting 02/05 (6 weeks) \\
 
-_On-the-water sessions_: To be held at Lake Lanier Sailing Club on Sundays with dates to be announced! \\
+_On-the-water sessions_: To be held at Lake Lanier Sailing Club on Sundays! \\
 
-_Event cost_: The course cost is $20, and you must be a dues paying member of the Georgia Tech Sailing Club ($65/semester for students, $95/semester for faculty).
+_Event cost_: The course cost is $30, and you must be a dues paying member of the Georgia Tech Sailing Club.
 <br>
 <br>
 Join us on Slack to get updates on the next iteration of the class!
