Update LTS links

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -58,12 +58,12 @@ The purpose of this club is to encourage sailing, teach sailing and promote raci
 
 _Classroom sessions_: Mondays at 6:15 pm in CRC 240, starting 02/05 (6 weeks) \\
 
-_On-the-water sessions_: To be held at Lake Lanier Sailing Club on Sundays! \\
+_On-the-water sessions_: Sundays at Lake Lanier Sailing Club! \\
 
 _Event cost_: The course cost is $30, and you must be a dues paying member of the Georgia Tech Sailing Club.
 <br>
 <br>
-Join us on Slack to get updates on the next iteration of the class!
+Sign up here: [https://forms.gle/2MN4o8Ss4qphBsSj9](https://forms.gle/2MN4o8Ss4qphBsSj9)
 <br>
 <br>
 If you have any questions, please contact @Fabian on Slack."
