Add link to NOR

--- a/_data/gtopen.yml
+++ b/_data/gtopen.yml
@@ -24,7 +24,11 @@ Registration is $60 per sailor and $40 for Optis and ACA sailors. A GT Open t-sh
 
       \\
 
-REGISTER HERE: [https://forms.gle/35r2gQuaDJPSHrF96](https://forms.gle/35r2gQuaDJPSHrF96)"
+REGISTER HERE: [https://forms.gle/35r2gQuaDJPSHrF96](https://forms.gle/35r2gQuaDJPSHrF96) \\
+
+      \\
+
+The NOR is posted [here](https://docs.google.com/document/d/1eV5PbErxVdLiRYWrLwg2QKibfoBNGjIW/edit?usp=sharing&ouid=104894213339007185521&rtpof=true&sd=true)."
     img: logo.png
 
 en-US:
