--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -54,16 +54,16 @@ The purpose of this club is to encourage sailing, teach sailing and promote raci
     title: "Learn To Sail Class"
     text: "A 6-week course, ideal for beginners or those seeking a quick refresher course in sailing!"
     img: intro/learn.png
-    content: "Dive into our Learn To Sail course and master the lingo and skills needed to sail a boat. With in-person classroom sessions at the CRC and hands-on practice sessions out on the water, you're in for an adventurous ride. Whether you're a wide-eyed freshman or a seasoned faculty member, this is your golden ticket to making waves on campus. So come, be part of the Ramblin' Wreck community and let's set sail together!<br><br>
+    content: "Dive into our Learn To Sail course and master the skills needed to sail a boat. With in-person classroom sessions at the CRC and hands-on practice sessions out on the water, you're in for an adventurous ride. Whether you're a wide-eyed freshman or a seasoned faculty member, this is your golden ticket to making waves on campus. So come, be part of the Ramblin' Wreck community and let's set sail together!<br><br>
 
-_Classroom sessions_: Mondays at 6:15 pm in CRC 240, next course in the summer semester (6 weeks) \\
+_Classroom sessions_: Mondays at 6:15 pm in CRC 240, next course starts first week of June (for 6 weeks) \\
 
-_On-the-water sessions_: Sundays at Lake Lanier Sailing Club! \\
+_On-the-water sessions_: On the weekends at Lake Lanier Sailing Club! \\
 
 _Event cost_: The course cost is $30, and you must be a dues paying member of the Georgia Tech Sailing Club.
 <br>
 <br>
-If you have any questions, please contact @Fabian on Slack."
+If you have any questions, please contact @Charlotte on Slack."
 
   insta:
     title: "Follow Us"
