Add GT Open 2024 results

--- a/_data/gtopen.yml
+++ b/_data/gtopen.yml
@@ -29,7 +29,22 @@ en: &DEFAULT_EN
 
         \\
 
-  The NOR is posted [here](https://docs.google.com/document/d/1eV5PbErxVdLiRYWrLwg2QKibfoBNGjIW/edit?usp=sharing&ouid=104894213339007185521&rtpof=true&sd=true)."
+  The NOR is posted [here](https://docs.google.com/document/d/1eV5PbErxVdLiRYWrLwg2QKibfoBNGjIW/edit?usp=sharing&ouid=104894213339007185521&rtpof=true&sd=true). \\
+
+        \\
+
+  **Results:** \\
+
+  **Thistle:** (*1st*) Kyle Meyhoefer & Wheeler Sutton, (*2nd*) A.J. Pereira & Davis MacLeod, (*3rd*) Katelyn Maner Mogan & Daniel Postell \\
+
+  **Junior 420s:** (*1st*) Laura Dutson & Helen Dollacker, (*2nd*) Knox Bruley & William Dollacker \\
+
+  **Spinnaker 420s:** (*1st*) Roberto Martelli & Justin Tribou, (*2nd*) Matt Sheffield & Francesca Ruhe \\
+
+  **Open 420s:** (*1st*) Keenan Nicholson & Norris Nicholson, (*2nd*) Scott Claudon & Rebecca Forry, (*3rd*) Matthew Salley & Ethan England \\
+
+  **Lasers:** (*1st*) Tyler LaBonte, (*2nd*) Ralph \\
+        "
       img: 2024.png
     year-2025:
       title: "Georgia Tech Open Regatta 2025"
