Update GT Open 2024 results

--- a/_data/gtopen.yml
+++ b/_data/gtopen.yml
@@ -43,7 +43,7 @@ en: &DEFAULT_EN
 
   **Open 420s:** (*1st*) Keenan Nicholson & Norris Nicholson, (*2nd*) Scott Claudon & Rebecca Forry, (*3rd*) Matthew Salley & Ethan England \\
 
-  **Lasers:** (*1st*) Tyler LaBonte, (*2nd*) Ralph \\
+  **Lasers:** (*1st*) Tyler LaBonte, (*2nd*) Ralph Herrera \\
         "
       img: 2024.png
     year-2025:
