Update GT Open 2024 results

--- a/_data/gtopen.yml
+++ b/_data/gtopen.yml
@@ -33,7 +33,7 @@ en: &DEFAULT_EN
 
         \\
 
-  **Results:** \\
+  **Winners:** \\
 
   **Thistle:** (*1st*) Kyle Meyhoefer & Wheeler Sutton, (*2nd*) A.J. Pereira & Davis MacLeod, (*3rd*) Katelyn Maner Mogan & Daniel Postell \\
 
