--- a/_data/team.yml
+++ b/_data/team.yml
@@ -34,9 +34,9 @@ en: &DEFAULT_EN
       - name: "Fabian Fleischer"
         position: "Keelboat Race Team Captain"
         image: fabian.jpg
-      - name: "Francesca Ruhe"
+      - name: "Grace Gentner"
         position: "Membership Chair"
-        image: francesca.jpg
+        image: grace.jpg
       - name: "Alexey Tatarinov"
         position: "Safety Officer"
         image: alexey.jpg
