--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -56,14 +56,8 @@ The purpose of this club is to encourage sailing, teach sailing and promote raci
     img: intro/learn.png
     content: "Dive into our Learn To Sail course and master the skills needed to sail a boat. With in-person classroom sessions at the CRC and hands-on practice sessions out on the water, you're in for an adventurous ride. Whether you're a wide-eyed freshman or a seasoned faculty member, this is your golden ticket to making waves on campus. So come, be part of the Ramblin' Wreck community and let's set sail together!<br><br>
 
-_Classroom sessions_: Mondays at 6:00 pm in CRC 240, starts September 16th (for 6 weeks); Info session on Aug 29th (7:00 pm in CRC 240) \\
+The course in this Spring semester is already in full swing! Join our slack to get updates for the Summer and Fall classes.
 
-_On-the-water sessions_: On the weekends at Lake Lanier Sailing Club! \\
-
-_Event cost_: The course cost is $30, and you must be a dues paying member of the Georgia Tech Sailing Club.
-<br>
-<br>
-Sign up here: [https://forms.gle/WfMLsxTzva48EwaT6](https://forms.gle/WfMLsxTzva48EwaT6)
 <br>
 <br>
 If you have any questions, please contact @Lauren on Slack."
