Update gtopen info

--- a/_data/gtopen.yml
+++ b/_data/gtopen.yml
@@ -57,11 +57,11 @@ en: &DEFAULT_EN
 
         \\
 
-  Registration will be available here. Check back soon. \\
+  Registration is open [here](https://docs.google.com/forms/d/e/1FAIpQLSfoer0H7r-u-USHBqQKDNU1Zinn8FGD9fghFR7yk43kAluZCg/viewform?usp=sharing). \\
 
         \\
 
-  The NOR and SIs will be posted here as well."
+  The NOR is available [here](https://drive.google.com/file/d/11j6stghc5_YYZnPiSHKA2YBxK3C-IzQt/view?usp=sharing). Please check back for SIs closer to the event."
       img: 2025.png
 
 en-US:
