Update gtopen info

--- a/_data/gtopen.yml
+++ b/_data/gtopen.yml
@@ -57,11 +57,19 @@ en: &DEFAULT_EN
 
         \\
 
+  **Update**: We are changing the schedule to Saturday only! Also, we we only have a dinghy fleet. \\
+
+        \\
+
   Registration is open [here](https://docs.google.com/forms/d/e/1FAIpQLSfoer0H7r-u-USHBqQKDNU1Zinn8FGD9fghFR7yk43kAluZCg/viewform?usp=sharing). \\
 
         \\
 
-  The NOR is available [here](https://drive.google.com/file/d/11j6stghc5_YYZnPiSHKA2YBxK3C-IzQt/view?usp=sharing). Please check back for SIs closer to the event."
+  The amended NOR is available [here](https://drive.google.com/file/d/150Cz5iz-5g3si8QMq1K6oEULVSXotzzp/view?usp=sharing). \\
+
+  The SIs are available [here](https://drive.google.com/file/d/1JGThLcJDo90RGPaVBB7Fx1J8CJcp9mXC/view?usp=sharing).
+
+    "
       img: 2025.png
 
 en-US:
